[gd_scene load_steps=30 format=3 uid="uid://bxtp8uggorlqb"]

[ext_resource type="Script" path="res://src/characters/bosses/Shaka Boom/Shaka.gd" id="1_g7w81"]
[ext_resource type="Resource" uid="uid://uu34agn4p5h2" path="res://assets/resources/instances/exchangable/Shaka/SlimeSpawn.tres" id="2_5vtxt"]
[ext_resource type="Texture2D" uid="uid://ccyhhg33dls4l" path="res://assets/sprites/characters/bosses/shaka boom/Shaka Boom MEGASHEET.png" id="3_5lotg"]
[ext_resource type="PackedScene" uid="uid://bvlv7rwah6txw" path="res://src/weapons/projectiles/Shaka Boom/Shaka_fire.tscn" id="3_deke8"]
[ext_resource type="Shader" path="res://assets/shaders/outline_shader.gdshader" id="3_p85wp"]
[ext_resource type="Script" path="res://assets/resources/scripts/launch_method/LinearLaunch.gd" id="4_7vklv"]
[ext_resource type="Script" path="res://custom_nodes/combat/hurt_box.gd" id="4_bqvej"]
[ext_resource type="Script" path="res://assets/resources/scripts/exchangable/health/health_exchangable.gd" id="4_vtaru"]
[ext_resource type="Script" path="res://assets/resources/scripts/exchangable/attacks/fourwayShoot.gd" id="5_1mk4u"]
[ext_resource type="Script" path="res://src/characters/bosses/hit_area.gd" id="5_1s86t"]
[ext_resource type="Script" path="res://custom_nodes/combat/health_monitor.gd" id="6_u6ngt"]

[sub_resource type="Resource" id="Resource_7gwc8"]
script = ExtResource("4_7vklv")
protectile = ExtResource("3_deke8")
fire_range = 300.0
speed = 100.0

[sub_resource type="Resource" id="Resource_j2keq"]
script = ExtResource("5_1mk4u")
spawn_delay = 0.2
ring_count = 3
projectiles = 50
launch = SubResource("Resource_7gwc8")
offset = 10.0
weapon_range = 0.0
delta = -1
cooldown = 0.0
name = ""
symbol = 0

[sub_resource type="Resource" id="Resource_gvvjl"]
script = ExtResource("4_vtaru")
max_health = 6
name = ""
symbol = 0

[sub_resource type="Animation" id="Animation_o7wyk"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [48]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -32)]
}

[sub_resource type="Animation" id="Animation_mh75w"]
resource_name = "angry"
length = 2.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.6, 1.7, 1.8, 1.90218, 2.00218, 2.10218, 2.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 2.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, -32), Vector2(0, -32)]
}

[sub_resource type="Animation" id="Animation_fn07e"]
resource_name = "angry_loop"
length = 0.4
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [40, 41, 42, 44]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, -32), Vector2(0, -32)]
}

[sub_resource type="Animation" id="Animation_ivxd4"]
resource_name = "dead"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [48, 49, 50, 51, 52, 53, 54, 55, 56]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, -32), Vector2(0, -32)]
}

[sub_resource type="Animation" id="Animation_ivrb1"]
resource_name = "hurt"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [45, 46, 47, 46]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, -32), Vector2(0, -32)]
}

[sub_resource type="Animation" id="Animation_1plsd"]
resource_name = "idle"
length = 1.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3, 0.6, 1.3, 1.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, -32), Vector2(0, -32)]
}

[sub_resource type="Animation" id="Animation_goq0p"]
resource_name = "scared"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [22, 23, 22, 24, 23, 22]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, -32), Vector2(0, -32)]
}

[sub_resource type="Animation" id="Animation_ahcek"]
resource_name = "scared_start"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [17, 18, 19, 20]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, -32), Vector2(0, -32)]
}

[sub_resource type="Animation" id="Animation_43lvx"]
resource_name = "summoning"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [9, 10]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, -32), Vector2(0, -32)]
}

[sub_resource type="Animation" id="Animation_2uuh1"]
resource_name = "summoning_end"
length = 0.25
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.15),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [9, 16, 5]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, -32), Vector2(0, -32)]
}

[sub_resource type="Animation" id="Animation_crqbe"]
resource_name = "summoning_start"
length = 0.9
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.6, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [6, 7, 12, 13, 8, 9]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.9),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, -32), Vector2(0, -32)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_i8fv3"]
_data = {
"RESET": SubResource("Animation_o7wyk"),
"angry": SubResource("Animation_mh75w"),
"angry_loop": SubResource("Animation_fn07e"),
"dead": SubResource("Animation_ivxd4"),
"hurt": SubResource("Animation_ivrb1"),
"idle": SubResource("Animation_1plsd"),
"scared": SubResource("Animation_goq0p"),
"scared_start": SubResource("Animation_ahcek"),
"summoning": SubResource("Animation_43lvx"),
"summoning_end": SubResource("Animation_2uuh1"),
"summoning_start": SubResource("Animation_crqbe")
}

[sub_resource type="ShaderMaterial" id="ShaderMaterial_w45ml"]
shader = ExtResource("3_p85wp")
shader_parameter/color = Color(0.333333, 1, 1, 0)
shader_parameter/modulate = Color(1, 1, 1, 1)
shader_parameter/width = 1.0
shader_parameter/pattern = 0
shader_parameter/inside = false
shader_parameter/add_margins = true

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_iaj17"]
radius = 13.0
height = 50.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_s1k48"]
radius = 6.0

[node name="Shaka" type="CharacterBody2D"]
y_sort_enabled = true
collision_layer = 520
script = ExtResource("1_g7w81")
alignment = 1
primary_attack = ExtResource("2_5vtxt")
secondary_attack = SubResource("Resource_j2keq")
health_handle = SubResource("Resource_gvvjl")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_i8fv3")
}
next/scared_start = &"scared"
next/summoning_start = &"summoning"

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_w45ml")
position = Vector2(0, -32)
texture = ExtResource("3_5lotg")
hframes = 58
frame = 48

[node name="hurt_box" type="Area2D" parent="." node_paths=PackedStringArray("health_monitor")]
script = ExtResource("4_bqvej")
health_monitor = NodePath("../HealthMonitor")
alignment = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="hurt_box"]
position = Vector2(0, -26)
shape = SubResource("CapsuleShape2D_iaj17")

[node name="hit_area" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 0
script = ExtResource("5_1s86t")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="hit_area"]
position = Vector2(0, -26)
shape = SubResource("CapsuleShape2D_iaj17")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="."]
position = Vector2(-1, -5)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_s1k48")

[node name="HealthMonitor" type="Node" parent="."]
script = ExtResource("6_u6ngt")
_health = 10

[node name="Center" type="Marker2D" parent="."]
position = Vector2(0, -23)

[node name="sequence_timer" type="Timer" parent="."]
one_shot = true

[node name="slime_timer" type="Timer" parent="."]
wait_time = 0.5

[node name="mad_timer" type="Timer" parent="."]

[node name="scared_timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="hit" from="hurt_box" to="." method="_on_hit"]
[connection signal="hit" from="hurt_box" to="hurt_box" method="_on_hit"]
[connection signal="killed" from="HealthMonitor" to="." method="die"]
[connection signal="timeout" from="sequence_timer" to="." method="_next_sequence"]
[connection signal="timeout" from="slime_timer" to="." method="summon_slimes"]
[connection signal="timeout" from="mad_timer" to="." method="mad_hit"]
[connection signal="timeout" from="scared_timer" to="." method="end_scared"]
